--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,7 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
 @import "base/base";
+@import "libs/animate";
 
 @import "pages/index";
+@import "pages/404";
